make module-info.java the primary service discovery mechanism
Refactor BEASTClassLoader so that JPMS module descriptors (provides
declarations) are scanned first, with version.xml as a supplement for
legacy packages. This enables IDE multi-project development: open
BEAST 3 and your package in IntelliJ, add a module-info.java with
provides declarations, and services are discovered automatically.

Key changes to BEASTClassLoader:
- ensureServicesLoaded(): central init that merges module descriptors
  (primary) then version.xml (supplement)
- mergeAllProviders(): scans all provides from a new plugin layer
- registerPluginLayer() now also scans module descriptors
- loadService/forName/addService all go through ensureServicesLoaded

Update docs to reflect module-info.java as primary path, add external
package development workflow to IntelliJ guide, fix beast3maven ->
beast3modular naming.